# fast_curate

./: README.md  pyproject.toml
fast_curate/: compute.py  gui.py  wrangle.py
